# grpc-files

./: .gitignore  CERTS.md  CONFIG.md  Cargo.toml  LICENSE  README.md  build.rs  generate-certs.sh  log.txt
proto/: files.proto
src/: client.rs  config.rs  lib.rs  main.rs  server.rs  tui-client.rs
src/tui/: app.rs  mod.rs  run.rs  ui.rs
uploads/: uploaded_test_file.txt
