[package]
name = "grpc-files"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
prost = "0.14.1"
prost-types = "0.14.1"
ratatui = "0.29.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tonic = { version = "0.14.2", features = ["tls-aws-lc", "tls-connect-info"] }
tonic-prost = "0.14.2"
tonic-reflection = "0.14.2"
uuid = { version = "1.19.0", features = ["v4"] }


[build-dependencies]
tonic-prost-build = "0.14.2"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "tui-client"
path = "src/tui-client.rs"
